--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
-
-<!-- 		<plugin> -->
-<!-- 			<groupId>com.agilejava.docbkx</groupId> -->
-<!-- 			<artifactId>docbkx-maven-plugin</artifactId> -->
-<!-- 			<version>2.0.14</version> -->
-<!-- 		</plugin> -->
-
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>fop</artifactId>
 			<version>1.0</version> <!-- 0.94 -->
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -50,7 +42,7 @@
 					</execution>
 				</executions>
 			</plugin>
-						<plugin>
+			<!-- <plugin>
 				<groupId>com.agilejava.docbkx</groupId>
 				<artifactId>docbkx-maven-plugin</artifactId>
 				<version>2.0.14</version>
@@ -71,12 +63,46 @@
 							<sourceDirectory>${basedir}/src/main/xml</sourceDirectory>
 							<xincludeSupported>true</xincludeSupported>
 							<includes>cv.xml</includes>
-							<foCustomization>src/main/xsl/fo-pdf.xsl</foCustomization>
+							<foCustomization>src/main/xsl/hresume.xsl</foCustomization>
 							<targetDirectory>${project.build.directory}</targetDirectory>
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>-->
+			
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>xml-maven-plugin</artifactId>
+				<version>1.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>transform</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<transformationSets>
+						<transformationSet>
+							<dir>${basedir}/src/main/xml</dir>
+							<stylesheet>${basedir}/src/main/xsl/hresume.xsl</stylesheet>
+							<excludes>
+								<exclude>**/*.dtd</exclude>
+								<exclude>**/*.xsl</exclude>
+							</excludes>
+							<outputDir>target</outputDir>
+						</transformationSet>
+					</transformationSets>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>net.sf.saxon</groupId>
+						<artifactId>saxon</artifactId>
+						<version>8.7</version>
+						</dependency>
+				</dependencies>
 			</plugin>
+			
 		</plugins>
 	</build>
 </project>
