--- a/build.xml
+++ b/build.xml
@@ -38,6 +38,7 @@
             <fileset dir="C:\Tools\Maven\localRepository\org\apache\xmlgraphics\xmlgraphics-commons\1.5" includes="*.jar"/>
             <fileset dir="C:\Tools\Maven\localRepository\commons-io\commons-io\2.4" includes="*.jar"/>
 <fileset dir="C:\Tools\Maven\localRepository\avalon-framework\avalon-framework-api\4.2.0" includes="*.jar"/>
+<fileset dir="C:\Tools\Maven\localRepository\avalon-framework\avalon-framework\4.1.3" includes="*.jar"/>
 <fileset dir="C:\Tools\Maven\localRepository\org\apache\xmlgraphics\batik-util\1.7" includes="*.jar"/>
 <fileset dir="C:\Tools\Maven\localRepository\org\apache\xmlgraphics\batik-bridge\1.7" includes="*.jar"/>
 <fileset dir="C:\Tools\Maven\localRepository\org\apache\xmlgraphics\batik-svggen\1.7" includes="*.jar"/>
@@ -46,6 +47,7 @@
 <fileset dir="C:\Tools\Maven\localRepository\org\apache\xmlgraphics\batik-css\1.7" includes="*.jar"/>
 
         </classpath>
+        
     </taskdef>
 
 <!--     <target name="ascii2docbook" description="Converts text documentation in asciidoc format to docbook xml"> -->
@@ -115,9 +117,10 @@
 <!--     </target> -->
 
     <target name="fo2pdf" description="Generates multiple PDF files">
-        <fop format="application/pdf" outdir="${pdf.out.dir}" basedir="docs">
+        <fop format="application/pdf" outdir="${pdf.out.dir}" basedir="." userconfig="fop.properties">
+            
             <fileset dir="${fo.src.dir}">
-                <include name="*.fo"/>
+                <include name="*-fo.xml"/>
             </fileset>
         </fop>
     </target>
