--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,13 @@
 language: java
-jdk: oraclejdk7
+jdk:
+  - oraclejdk7
+  - openjdk6
+  - openjdk7
+env:
+  matrix:
+
 script: mvn install
+
+notifications:
+  email:
+    recipients: paul.t.oconnell@gmail.com
