--- a/pom.xml
+++ b/pom.xml
@@ -56,33 +56,33 @@
 <!-- 				</executions> -->
 <!-- 			</plugin> -->
 
-<!-- 			<plugin> -->
-<!-- 				<groupId>com.agilejava.docbkx</groupId> -->
-<!-- 				<artifactId>docbkx-maven-plugin</artifactId> -->
-<!-- 				<version>2.0.14</version> -->
-<!-- 				<dependencies> -->
-<!-- 					<dependency> -->
-<!-- 						<groupId>org.docbook</groupId> -->
-<!-- 						<artifactId>docbook-xml</artifactId> -->
-<!-- 						<version>4.4</version> -->
-<!-- 					</dependency> -->
-<!-- 				</dependencies> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<goals> -->
-<!-- 							<goal>generate-pdf</goal> -->
-<!-- 						</goals> -->
-<!-- 						<phase>package</phase> -->
-<!-- 						<configuration> -->
-<!-- 							<sourceDirectory>${basedir}/src/main/xml</sourceDirectory> -->
-<!-- 							<xincludeSupported>true</xincludeSupported> -->
-<!-- 							<includes>cv.xml</includes> -->
-<!-- 							<foCustomization>src/main/xsl/fo-pdf.xsl</foCustomization> -->
-<!-- 							<targetDirectory>${project.build.directory}</targetDirectory> -->
-<!-- 						</configuration> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
+			<plugin>
+				<groupId>com.agilejava.docbkx</groupId>
+				<artifactId>docbkx-maven-plugin</artifactId>
+				<version>2.0.14</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.docbook</groupId>
+						<artifactId>docbook-xml</artifactId>
+						<version>4.4</version>
+					</dependency>
+				</dependencies>
+				<executions>
+					<execution>
+						<goals>
+							<goal>generate-pdf</goal>
+						</goals>
+						<phase>package</phase>
+						<configuration>
+							<sourceDirectory>${basedir}/src/main/xml</sourceDirectory>
+							<xincludeSupported>true</xincludeSupported>
+							<includes>index.xml</includes>
+							<foCustomization>src/main/xsl/emeraldjava.xsl</foCustomization>
+							<targetDirectory>${project.build.directory}</targetDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<!-- <plugin> <groupId>com.agilejava.docbkx</groupId> <artifactId>docbkx-maven-plugin</artifactId> 
 				<version>2.0.14</version> <dependencies> <dependency> <groupId>org.docbook</groupId> 
 				<artifactId>docbook-xml</artifactId> <version>4.4</version> </dependency> 
@@ -135,6 +135,7 @@
 				<artifactId>maven-site-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
+			        <skipDeploy>true</skipDeploy>
 					<generateReports>false</generateReports>
 					<generateSitemap>false</generateSitemap>
 				</configuration>
