Use apache poi to generate a word doc.

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
 	<version>0.0.2-SNAPSHOT</version>
 	<url>https://github.com/emeraldjava/</url>
 
+	<properties>
+		<poi.version>3.15</poi.version>
+	</properties>
+
 	<issueManagement>
 		<url>https://github.com/emeraldjava/emeraldjava/issues</url>
 		<system>GitHub Issues</system>
@@ -32,30 +36,39 @@
 			<artifactId>fop</artifactId>
 			<version>1.0</version> <!-- 0.94 -->
 		</dependency>
+
+		<dependency>
+			<groupId>org.docx4j</groupId>
+			<artifactId>docx4j</artifactId>
+			<version>3.3.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ie.emeraldjava</groupId>
+			<artifactId>hrxml</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${poi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-scratchpad</artifactId>
+			<version>${poi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.opensagres.xdocreport</groupId>
+			<artifactId>org.apache.poi.xwpf.converter.pdf</artifactId>
+			<version>1.0.6</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
 		<plugins>
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
-<!-- 				<artifactId>maven-antrun-plugin</artifactId> -->
-<!-- 				<version>1.1</version> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<phase>validate</phase> -->
-<!-- 						<goals> -->
-<!-- 							<goal>run</goal> -->
-<!-- 						</goals> -->
-<!-- 						<configuration> -->
-<!-- 							<tasks> -->
-<!-- 								<echo message="Hello world" /> -->
-<!-- 								<echo message="${env.M2_HOME}"></echo> -->
-<!-- 							</tasks> -->
-<!-- 						</configuration> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
-
 			<plugin>
 				<groupId>com.agilejava.docbkx</groupId>
 				<artifactId>docbkx-maven-plugin</artifactId>
