--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The CV of emeraldjava",
   "main": "index.js",
   "scripts": {
-    "build": "hackmyresume BUILD ./src/main/resources/json/fresh/resume.json out-compact/paul.oconnell-resume.all -t compact"
+    "build": "hackmyresume BUILD ./src/main/resources/json/fresh/resume.json target/index.html -t compact",
+    "deploy": "gh-pages -d target -r https://$GH_TOKEN@github.com/emeraldjava/emeraldjava.git"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/emeraldjava/emeraldjava#readme",
   "dependencies": {
     "hackmyresume": "^1.9.0-beta"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
