--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>emeraldjava</groupId>
     <artifactId>emeraldjava</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.3-SNAPSHOT</version>
     <url>https://github.com/emeraldjava/</url>
 
     <properties>
@@ -64,12 +64,21 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>gatsby</id>
+                        <id>hackmyresume</id>
                         <goals>
                             <goal>npm</goal>
                         </goals>
                         <configuration>
                             <arguments>run-script build</arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>gh-pages</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run-script deploy</arguments>
                         </configuration>
                     </execution>
                 </executions>
