--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,6 @@
                 <configuration>
                     <nodeVersion>v12.13.0</nodeVersion>
                     <npmVersion>6.11.3</npmVersion>
-                    <!--                    <workingDirectory>src</workingDirectory>-->
                 </configuration>
                 <executions>
                     <execution>
@@ -79,6 +78,9 @@
                         </goals>
                         <configuration>
                             <arguments>run-script deploy</arguments>
+                            <environmentVariables>
+                                <GITHUB_TOKEN>${GITHUB_TOKEN}</GITHUB_TOKEN>
+                            </environmentVariables>
                         </configuration>
                     </execution>
                 </executions>
