--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -17,6 +17,6 @@ jobs:
         node-version: ${{ matrix.node }}
     - run: npm install
     - run: npm run-script build
-    - run: npm run-script deploy<
+    - run: npm run-script deploy
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
