add gh-pages to the ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
 target/*
 .project
 /target/
+/gh-pages/
 
 .classpath
-
 *.prefs
-
 *.sublime-workspace
-
 *.sublime-project
-
 *.backup
 
 *.idea/
