--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BASE_BRANCH: master # The branch the action should deploy from.
-        BRANCH: gh-pages # The branch the action should deploy to.
+        BRANCH: docs # The branch the action should deploy to.
         FOLDER: target # The folder the action should deploy.
         BUILD_SCRIPT: npm install && npm run-script build
