--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    #- name: Set up JDK 1.8
+    #  uses: actions/setup-java@v1
+    #  with:
+    #    java-version: 1.8
+    #- name: Build with Maven
+    #  run: mvn -B package --file pom.xml
     - name: Deploy with github-pages
       uses: JamesIves/github-pages-deploy-action@master
       env:
