--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,12 +12,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    #- name: Set up JDK 1.8
-    #  uses: actions/setup-java@v1
-    #  with:
-    #    java-version: 1.8
-    #- name: Build with Maven
-    #  run: mvn -B package --file pom.xml
     - name: Deploy with github-pages
       uses: JamesIves/github-pages-deploy-action@master
       env:
@@ -25,4 +19,4 @@ jobs:
         BASE_BRANCH: master # The branch the action should deploy from.
         BRANCH: gh-pages # The branch the action should deploy to.
         FOLDER: target # The folder the action should deploy.
-        BUILD_SCRIPT: npm install && npm run-script build # && git commit --allow-empty -m "Empty commit" && git push
+        BUILD_SCRIPT: npm install && npm run-script build
