--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The CV of emeraldjava",
   "main": "index.js",
   "scripts": {
-    "build": "hackmyresume BUILD ./src/main/resources/json/fresh/resume.json target/index.html -t compact",
-    "deploy": "gh-pages -d target -r https://$GITHUB_TOKEN@github.com/emeraldjava/emeraldjava.git -u \"emeraldjava <paul.t.oconnell@gmail.com>\" "
+    "build": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json --theme rocketspacer",
+    "deploy": "gh-pages -d out -r https://$GITHUB_TOKEN@github.com/emeraldjava/emeraldjava.git -u \"emeraldjava <paul.t.oconnell@gmail.com>\" "
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,15 @@
   },
   "homepage": "https://github.com/emeraldjava/emeraldjava#readme",
   "dependencies": {
-    "hackmyresume": "^1.9.0-beta"
+    "jsonresume-theme-classy": "^1.0.9",
+    "jsonresume-theme-elegant": "^1.13.2",
+    "jsonresume-theme-material": "^1.3.1",
+    "jsonresume-theme-modern": "0.0.18",
+    "jsonresume-theme-onepage": "0.0.3",
+    "jsonresume-theme-rocketspacer": "^1.2.2",
+    "jsonresume-theme-short": "^0.1.7",
+    "jsonresume-theme-stackoverflow": "^1.4.0",
+    "kiss-my-resume": "^0.8.2"
   },
   "devDependencies": {
     "gh-pages": "^2.2.0"
