--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "The CV of emeraldjava",
   "main": "index.js",
   "scripts": {
-    "build": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f HTML -o target -n index -t rocketspacer",
+    "rocketspacer": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f html -o ./target/rocketspacer -n index -t rocketspacer",
+    "classy": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f html -o ./target/classy -n index -t classy",
+    "clean": "del-cli --force ./target",
+    "all": "npm-run-all -p -r rocketspacer classy",
     "deploy": "gh-pages -d target -r https://$GITHUB_TOKEN@github.com/emeraldjava/emeraldjava.git -u \"emeraldjava <paul.t.oconnell@gmail.com>\" "
   },
   "repository": {
@@ -19,9 +22,9 @@
   "homepage": "https://github.com/emeraldjava/emeraldjava#readme",
   "dependencies": {
     "jsonresume-theme-classy": "^1.0.9",
-    "jsonresume-theme-elegant": "^1.13.2",
-    "jsonresume-theme-material": "^1.3.1",
-    "jsonresume-theme-modern": "0.0.18",
+    "jsonresume-theme-elegant": "^1.7.11",
+    "jsonresume-theme-material": "^1.1.3",
+    "jsonresume-theme-modern": "^0.0.5",
     "jsonresume-theme-onepage": "0.0.3",
     "jsonresume-theme-rocketspacer": "^1.2.2",
     "jsonresume-theme-short": "^0.1.7",
@@ -29,6 +32,8 @@
     "kiss-my-resume": "^0.8.2"
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "del-cli": "^4.0.1",
+    "gh-pages": "^2.2.0",
+    "npm-run-all": "^4.1.5"
   }
 }
