--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/emeraldjava/emeraldjava.git"
   },
-  "author": "",
+  "author": "emeraldjava",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/emeraldjava/emeraldjava/issues"
