--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The CV of emeraldjava",
   "main": "index.js",
   "scripts": {
-    "rocketspacer": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f html -o ./target/rocketspacer -n index -t rocketspacer",
-    "classy": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f html -o ./target/classy -n index -t classy",
+    "rocketspacer": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/rocketspacer -n index -t rocketspacer",
+    "classy": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/classy -n index -t classy",
     "clean": "del-cli --force ./target",
     "all": "npm-run-all -p -r rocketspacer classy",
     "deploy": "gh-pages -d target -r https://$GITHUB_TOKEN@github.com/emeraldjava/emeraldjava.git -u \"emeraldjava <paul.t.oconnell@gmail.com>\" "
