--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The CV of emeraldjava",
   "main": "index.js",
   "scripts": {
+    "target": "mkdir -p target",
     "rocketspacer": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/rocketspacer -n index -t rocketspacer",
     "classy": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/classy -n index -t classy",
     "clean": "del-cli --force ./target",
