--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "target": "mkdir -p target",
     "rocketspacer": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/rocketspacer -n index -t rocketspacer",
     "classy": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/classy -n index -t classy",
+    "caffeine": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target -n index -t caffeine",
     "clean": "del-cli --force ./target",
-    "all": "npm-run-all -p -r rocketspacer classy",
+    "all": "npm-run-all -p -r rocketspacer classy caffeine",
     "deploy": "gh-pages -d target -r https://$GITHUB_TOKEN@github.com/emeraldjava/emeraldjava.git -u \"emeraldjava <paul.t.oconnell@gmail.com>\" "
   },
   "repository": {
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/emeraldjava/emeraldjava#readme",
   "dependencies": {
+    "jsonresume-theme-caffeine": "^1.2.3",
     "jsonresume-theme-classy": "^1.0.9",
     "jsonresume-theme-elegant": "^1.7.11",
     "jsonresume-theme-material": "^1.1.3",
