--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "target": "mkdir -p target",
     "rocketspacer": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/rocketspacer -n index -t rocketspacer",
     "classy": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/classy -n index -t classy",
-    "caffeine": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target -n index -t caffeine",
+    "actual": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/actual -n index -t actual",
+    "caffeine": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/caffeine -n index -t caffeine",
+    "onepage": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/onepage -n index -t onepage",
+    "stackoverflow": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/stackoverflow -n index -t stackoverflow",
+    "material": "node ./node_modules/kiss-my-resume/cli.js build ./src/main/resources/json/resume/jsonresume.json -f all -o ./target/material -n index -t material",
     "clean": "del-cli --force ./target",
-    "all": "npm-run-all -p -r rocketspacer classy caffeine",
+    "all": "npm-run-all -p -r rocketspacer classy caffeine actual",
     "deploy": "gh-pages -d target -r https://$GITHUB_TOKEN@github.com/emeraldjava/emeraldjava.git -u \"emeraldjava <paul.t.oconnell@gmail.com>\" "
   },
   "repository": {
@@ -23,6 +27,7 @@
   },
   "homepage": "https://github.com/emeraldjava/emeraldjava#readme",
   "dependencies": {
+    "jsonresume-theme-actual": "^0.2.1",
     "jsonresume-theme-caffeine": "^1.2.3",
     "jsonresume-theme-classy": "^1.0.9",
     "jsonresume-theme-elegant": "^1.16.1",
